--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.0",
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.3.1"
+    "vite": "^5.0.0"
   }
 }
